syntax = "proto3";

package pb;

option go_package = "ai_speaker/pb";

message VoiceChatRequest {
    string text = 1;
}

message VoiceChatResponse {
    bytes audio = 1;
    bool is_end = 2;
}

service VoiceChatService {
    rpc VoiceChat(VoiceChatRequest) returns (stream VoiceChatResponse);
}